force-app/main/default/objects/Bomba__c/Bomba__c.object-meta.xml
<CustomObject>
    <label>Bomba</label>
    <nameField>
        <label>Nome de Bomba</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bombas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>