force-app/main/default/objects/Bomba__c/fields/Ano_de_Fabricacao__c.field-meta.xml
<CustomField>
    <fullName>Ano_de_Fabricacao__c</fullName>
    <label>Ano de Fabricacao</label>
    <referenceTo>Ano__c</referenceTo>
    <relationshipLabel>Bombas</relationshipLabel>
    <relationshipName>Bombas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>