force-app/main/default/objects/Bomba__c/fields/Dano__c.field-meta.xml
<CustomField>
    <fullName>Dano__c</fullName>
    <label>Dano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>