force-app/main/default/objects/Bomba__c/fields/Fator_de_Dano__c.field-meta.xml
<CustomField>
    <fullName>Fator_de_Dano__c</fullName>
    <formula>Alcance__c  *  Dano__c *  (  
IF(ISPICKVAL( Tamanho__c , &quot;Pequeno&quot;), 1, 
IF(ISPICKVAL( Tamanho__c , &quot;Médio&quot;), 2, 
IF(ISPICKVAL( Tamanho__c , &quot;Grande Porte&quot;), 3, 0)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fator de Dano</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>