force-app/main/default/objects/Bomba__c/fields/idProprietario__c.field-meta.xml
<CustomField>
    <fullName>idProprietario__c</fullName>
    <label>idProprietario</label>
    <length>15</length>
    <type>Text</type>
</CustomField>