force-app/main/default/objects/Bomba__c/fields/Tamanho__c.field-meta.xml
<CustomField>
    <fullName>Tamanho__c</fullName>
    <label>Tamanho</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pequeno</fullName>
            </value>
            <value>
                <fullName>Médio</fullName>
            </value>
            <value>
                <fullName>Grande Porte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>