force-app/main/default/objects/Bomba__c/fields/The_Power_of_One__c.field-meta.xml
<CustomField>
    <fullName>The_Power_of_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>The Power of One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>