force-app/main/default/objects/Bomba__c/recordTypes/Bomba_Caseira.recordType-meta.xml
<RecordType>
    <fullName>Bomba_Caseira</fullName>
    <active>true</active>
    <label>Bomba Caseira</label>
</RecordType>