force-app/main/default/objects/Bomba__c/recordTypes/Bomba_Industrial.recordType-meta.xml
<RecordType>
    <fullName>Bomba_Industrial</fullName>
    <active>true</active>
    <label>Bomba Industrial</label>
</RecordType>