force-app/main/default/objects/Bomba__c/validationRules/Dano_Maior_que_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Dano_Maior_que_100</fullName>
    <active>true</active>
    <description>Dano maior que 100</description>
    <errorConditionFormula>Dano__c &gt; 100</errorConditionFormula>
    <errorDisplayField>Dano__c</errorDisplayField>
    <errorMessage>O dano não pode ser maior que 100</errorMessage>
</ValidationRule>